Settings entry: fix overflow cut-off
Fixes #334, a regression from the mobile UI changes

--- a/app/assets/stylesheets/zammad.scss
+++ b/app/assets/stylesheets/zammad.scss
@@ -8864,8 +8864,11 @@ footer {
 .settings-entry {
   margin-bottom: 42px;
   max-width: 700px;
-  overflow: auto;
-  -webkit-overflow-scrolling: touch;
+  
+  @include phone {
+    overflow: auto;
+    -webkit-overflow-scrolling: touch;
+  }
 
   &--stretched {
     max-width: none;
